fix:  set whitespaces according to rule 3.6 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   .header {
     text-align: center;
   }
-
+  
 }
 
 .main {
@@ -51,11 +51,13 @@
   padding: 0px;
 }
 
-.list__item, .title {
+.list__item,
+.title {
   list-style: none;
 }
 
-.input, .button {
+.input,
+.button {
   outline: none;
 }
 
@@ -87,7 +89,7 @@
   text-transform: uppercase;
 }
 
-.input_text{
+.input_text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -168,7 +170,7 @@
 
 /* Edit Task */
 
-.item__input.input_text{
+.item__input.input_text {
   display: none;
 }
 
